--- a/hands.css
+++ b/hands.css
@@ -1,6 +1,6 @@
-
-  .container {
+  .video_container {
     position: absolute;
+    top: 0;
     width: 100%;
     max-height: 100%;
   }
@@ -13,15 +13,59 @@
     right: 0;
     bottom: 0;
   }
-  .input_video.selfie {
-    transform: scale(-1, 1);
-  }
-  
+
   .output_canvas {
     display: block;
     width: 100%;
     position: absolute;
-  
+    transform: rotateY(180deg);
+    -webkit-transform:rotateY(180deg); /* Safari and Chrome */
+    -moz-transform:rotateY(180deg); /* Firefox */
+  }
+
+  .imusic_interface {
+    display: none;
+    position: absolute;
+    z-index: 1;
+  }
+
+  .instrument_grid {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+
+  .instrument_row {
+    display: flex;
+    height: 50%;
+  }
+
+  .instrument_area {
+    position: relative;
+    display: grid;
+    place-items: center;
+    height: 100%;
+    width: 50%;
+    border: 2px solid rgba(255, 255, 255, 0.3);
+  }
+
+  .instrument_image {
+    height: 50%;
+    width: auto;
+    opacity: 0.5;
+  }
+
+  .instrument_status_indicator {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    aspect-ratio: 1 / 1;
+    height: 10%;
+    border-radius: 50%;
+    background-color: yellow;
+    opacity: 0.7;
   }
   
 
