--- a/instruction.css
+++ b/instruction.css
@@ -22,21 +22,20 @@
 }
 
 .gesture_image{
+    background-color: white;
+    margin-left: 30px;
     width: 50px;
     height: 50px;
 }
 
 table{
     background-color: lightgreen;
+    opacity: 0.5;
     position: absolute;
     top: 8%;
     left: 10%;
     width:1200px;
     font-size: 20px;
-}
-
-th{
-    text-align: left;
 }
 
 th,td{
@@ -57,7 +56,7 @@ table,td{
     font-family:Arail;
     font-size: 20pt;
     width:600px;
-    color:white;
+    color:yellow;
 }
 
 .table_content{
