--- a/instruction.css
+++ b/instruction.css
@@ -1,19 +1,40 @@
-#instruction{
+#instructionsContainer{
     display: none;
+    place-items: center;
+    position: absolute;
+    margin: auto;
+    width: 100%;
+    height: 100%;
 }
 
-#show{
-    background-color:red;
+#instructions{
+    background-color: black;
+    min-width: fit-content;
+    width: 50%;
+    padding: 4em;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1em;
+    border-style: outset;
+}
+
+p {
+    text-align: center;
+}
+
+#toggleInstructionsButton{
+    background-color:black;
+    color: rgb(255, 255, 255);
     font-size: 20px;
-    position: relative;
+    position: absolute;
+    top: 1%;
+    left: 1%;
+    border-radius: 10px;
+    width: 10em;
 }
-
-#hide{
-    background-color:red;
-    font-size: 20px;
-    position: relative;
-}
-
 
 .leftarrow{
     position: absolute;
@@ -22,29 +43,31 @@
 }
 
 .gesture_image{
-    background-color: white;
-    margin-left: 30px;
     width: 50px;
     height: 50px;
+    filter: invert(1);
 }
 
-table{
-    background-color: lightgreen;
-    opacity: 0.5;
-    position: absolute;
-    top: 8%;
-    left: 10%;
-    width:1200px;
-    font-size: 20px;
+.rotate_minus90 {
+    transform: rotate(-90deg)
 }
 
 th,td{
     padding: 10px;
 }
 
-table,td{
-    border: 1px solid black;
-    border-collapse: collapse;
+#dismissButton {
+    margin-top: 2em;
+    border-radius: 1em;
+    border: 1px outset white;
+    width: 7em;
+    height: 2em;
+    display: grid;
+    place-items: center;
+}
+
+#dismissButton:hover {
+    cursor: pointer;
 }
 
 .table_caption{
@@ -52,18 +75,11 @@ table,td{
 }
 
 .table_head{
-    text-align:left;
-    font-family:Arail;
     font-size: 20pt;
-    width:600px;
-    color:yellow;
+    font-weight: normal;
 }
 
 .table_content{
     text-align:left;
-    font-family:Arail;
     font-size: 12pt;
-    width:600px;
-    color:black;
-    height: 100%;
 }
