--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
   aspect-ratio: 1 / 1;
   height: 10%;
   border-radius: 50%;
-  background-color: #00FF00;
+  background-color: #ff0000;
   opacity: 0.7;
   display: grid;
   place-items: center;
