--- a/style.css
+++ b/style.css
@@ -78,3 +78,31 @@ body {
   place-items: center;
   font-size: 20px;
 }
+
+.volume_bar_container {
+  position: absolute;
+  top: 25%;
+  right: 5%;
+  aspect-ratio: 1 / 5;
+  height: 50%;
+  border-radius: 1em;
+  background-color: #ffffff;
+  opacity: 0.7;
+  display: grid;
+  place-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  overflow: hidden;
+}
+
+.volume_bar{
+  background-color: #aaaaaa;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50%;
+  transition: height 0.2s;
+  box-sizing: border-box;
+  transform-origin: bottom;
+  z-index: -1;
+}
