--- a/styles/instruction.css
+++ b/styles/instruction.css
@@ -7,7 +7,7 @@
     height: 100%;
 }
 
-#introductionScreen{
+.introductionScreen{
     background-color: black;
     min-width: fit-content;
     height: 100vh;
@@ -56,8 +56,8 @@ p {
 }
 
 .gesture_image{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     filter: invert(1);
 }
 
@@ -69,14 +69,21 @@ th,td{
     padding: 10px;
 }
 
+.ensembleSelectionDiv {
+    display: flex;
+}
+
 .dismissButton {
-    margin-top: 2em;
+    margin-top: 1em;
     border-radius: 1em;
     border: 1px outset white;
     width: 7em;
     height: 2em;
     display: grid;
     place-items: center;
+    margin-left: 1em;
+    margin-right: 1em;
+    font-weight: bold;
 }
 
 .dismissButton:hover {
