--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.headerTitle {
+  position: absolute;
+  top: 5%;
+}
+
 .video_container {
   position: absolute;
   top: 0;
